--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <header>
         <a href="index.html" class="logo">HostGuard</a>
+        <div class="menu-btn"><i class="fas fa-bars"></i></div>
         <nav class="navigation">
             <a href="index.html"><i class="fas fa-home"></i> Home</a>
             <a href="#"><i class="fas fa-store"></i> Store</a>
