--- a/login.html
+++ b/login.html
@@ -21,6 +21,9 @@
             <a href="#"><i class="fas fa-store"></i> Store</a>
             <a href="#"><i class="fas fa-newspaper"></i> News</a>
             <a href="#"><i class="fas fa-envelope"></i> Contact</a>
+            <div class="loginmb">
+                <a href="login.html"><i class="fas fa-user"></i> Login</a>
+            </div>
             <button class="btnLogin-popup">
                 <i class="fas fa-user"></i> Login
             </button>
