--- a/login.html
+++ b/login.html
@@ -80,7 +80,7 @@
                 </div>
                 <button type="submit" class="btn">Register</button>
                 <div class="login-register">
-                    <p>Already have have an account ? <a href="#"
+                    <p>Already have an account ? <a href="#"
                     class="login-link">Login</a>
                     </p>
                 </div>
